--- a/src/frontend/stellar-explorer/package.json
+++ b/src/frontend/stellar-explorer/package.json
@@ -16,9 +16,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "apexcharts": "^4.4.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
