backend 0.1.0 and readme updated with new image

--- a/src/backend/stellar-api/pyproject.toml
+++ b/src/backend/stellar-api/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.115.8",
+    "slowapi>=0.1.9",
     "stellar-sdk>=12.1.0",
     "uvicorn>=0.34.0",
 ]
