--- a/src/backend/stellar-api/pyproject.toml
+++ b/src/backend/stellar-api/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastapi>=0.115.8",
+    "httpx>=0.28.1",
+    "pytest-asyncio>=0.25.3",
+    "pytest>=8.3.4",
     "slowapi>=0.1.9",
     "stellar-sdk>=12.1.0",
     "uvicorn>=0.34.0",
