--- a/src/wallets/stellar_cli_wallet/Cargo.toml
+++ b/src/wallets/stellar_cli_wallet/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
-name = "stellar_cli_wallet"
+name = "stellar_cli_wallet_lumen"
 version = "0.1.0"
 edition = "2021"
+description = "A CLI tool for interacting with Stellar and Soroban networks."
+license = "MIT"
+repository = "https://github.com/robdicoco/dojo-stellar/tree/main/src/wallets/stellar_cli_wallet"
+keywords = ["stellar", "soroban", "cli", "blockchain","lumen"]
+categories = ["command-line-utilities", "cryptography"]
+readme = "README.md"
+authors = ["Rob DC <pavusa@gmail.com>"]
 
 [dependencies]
 reqwest = { version = "0.11", features = ["json"] }  # For HTTP requests
