--- a/src/frontend/stellar-explorer/package.json
+++ b/src/frontend/stellar-explorer/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@stellar/typescript-wallet-sdk": "^1.9.0",
     "apexcharts": "^4.4.0",
     "pinia": "^2.3.1",
     "vue": "^3.5.13",
